Added test cases for Create,Cancel & View Bookings
